# nba_mcp_server

./: .gitignore  CHANGELOG.md  CLAUDE.md  ENDPOINT_VERIFICATION.md  PROGRESS.md  README.md  README.pypi.md  pyproject.toml
src/: nba_server.py
src/nba_mcp_server/: __init__.py  server.py
tests/: conftest.py  test_helpers.py  test_server.py
